updated style and package

--- a/example/css/styles.css
+++ b/example/css/styles.css
@@ -3,7 +3,8 @@
 body {
   background-color: #242424;
   margin: 0px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;*/
+  font-family: Arial, Helvetica, sans-serif;
   color: white;
   font-weight: normal;
   padding-top: 0;
@@ -11,15 +12,16 @@ body {
 }
 
 h1, h2, h3, h4 {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /*font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;*/
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-  font-size: 80px;
+  font-size: 130px;
 }
 
 h2 {
-  font-size: 45px;
+  font-size: 65px;
 }
 
 header {
@@ -116,17 +118,19 @@ header .headline h2 {
 #result_strip > ul > li {
   display: inline-block;
   vertical-align: middle;
-  width: 350px;
+  width: 700px;
 }
 
 #result_strip > ul > li .thumbnail {
-  padding: 6px;
-  margin: 5px;
+  padding: 8px;
+  margin: 7px;
+  width: 600px;
   border: 1px dashed #CCC;
 }
 
 #result_strip > ul > li .thumbnail img {
-  max-width: 275px;
+  max-width: 550px;
+  height: 300px;
 }
 
 #result_strip > ul > li .thumbnail .caption {
@@ -136,9 +140,9 @@ header .headline h2 {
 #result_strip > ul > li .thumbnail .caption h2 {
   text-align: center;
   word-wrap: break-word;
-  height: 40px;
+  height: 60px;
   margin: 0px;
-  font-weight: bold;
+  font-weight: normal;
   text-decoration: underline;
 }
 
